.data/projects/darklua-0.17.2/tests/snapshots/bundle__without_rules__require_empty_path_errors.snap
---
source: tests/bundle.rs
expression: "error_display.join(\"\\n\")"
---
error processing `src/main.lua` (bundler): unable to require resource at ``: path is empty
