.data/projects/darklua-0.17.2/tests/snapshots/bundle__without_rules__require_lua_file_with_unsupported_extension.snap
---
source: tests/bundle.rs
expression: "error_display.join(\"\\n\")"
---
error processing `src/main.lua` (bundler): unable to require resource with extension `error` at `src/value.error`
