.data/projects/darklua-0.17.2/tests/snapshots/bundle__without_rules__require_own_lua_file.snap
---
source: tests/bundle.rs
expression: "error_display.join(\"\\n\")"
---
error processing `src/main.lua` (bundler): cyclic require detected with `src/main.lua` > `src/main.lua`
