.data/projects/darklua-0.17.2/tests/snapshots/bundle__without_rules__require_unknown_relative_file_with_extension.snap
---
source: tests/bundle.rs
expression: "error_display.join(\"\\n\")"
---
error processing `src/main.lua` (bundler): unable to find `src/library.luau` (tried `src/library.luau`)
